--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,5 +26,5 @@ html
             button.logout-button(type="button")
                 a Log out
         block content
-        script(src="/javascripts/shared/posts.js")
+        //- Файл posts.js не существует в проекте, поэтому его подключение было удалено
         script(src="/javascripts/admin.js")
